# key-generator

./: Cargo.toml  README.md
src/: key.rs  lib.rs  ui.rs
src/key/: key_type.rs
src/ui/: key_row.rs  key_types.rs  state.rs  widgets.rs
src/ui/widgets/: config_panel.rs  key_table.rs
