[package]
name = "key_generator"
version = "0.9.27"
edition = "2021"
authors = ["Nazar Vanivskyi"]
license = "MIT"
repository = "https://github.com/NazarK0/key-generator"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
more-asserts = "0.3"
rand = "0.8"
eframe = "0.18"
image = "0.24"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["wincon", "winuser"]}